--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   http:
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
