--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   badges: ^2.0.3
   carousel_slider: ^4.1.1
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
